6. Updates need finish test and solve auth in tests
